# etrap-mcp

./: README.md  main.py  pyproject.toml  test_mcp_stdio.py
mcp_etrap/: __init__.py  app.py  mcp_config.py
mcp_etrap/tools/: __init__.py  get_batch.py  get_config.py  get_contract_info.py  get_nft.py  list_batches.py  search_batches.py  verify_batch.py  verify_transaction.py
