[project]
name = "etrap-mcp"
version = "0.1.0"
description = "MCP server for the ETRAP platform"
readme = "README.md"
authors = [
    { name = "Marco Graziano", email = "marco@graziano.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.8,<3.0",
    "uvicorn[standard]",
    "etrap-sdk @ file:///home/marco/Development/mglabs/etrap/near/etrap-sdk",
    "pydantic>=2.6",
    "python-dotenv",
    "httpx>=0.28.1",
    "mcp>=1.9.4",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
mcp-etrap = "mcp_etrap.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["mcp_etrap"]

[tool.uv]
override-dependencies = [
    "httpx>=0.28.1",
]
